INTERNAL: GenderFeatureTest (FSC-20)
Reviewed-by: Wojciech Wątroba <wwatroba@silenteight.com>
Merged from: https://gitlab.silenteight.com/fab/fab-data-prep/-/merge_requests/31