@@ -3,6 +3,8 @@ package com.silenteight.fab.dataprep.domain.model;
 import lombok.Builder;
 import lombok.Value;
 
+import org.apache.commons.lang3.StringUtils;
+
 @Value
 @Builder
 public class ParsedMessageData {
@@ -44,7 +46,7 @@ public class ParsedMessageData {
 
   public CustomerType getCustomerTypeAsEnum() {
     String type = getCustomerType();
-    if (type == null || type.isBlank()) {
+    if (StringUtils.isBlank(type)) {
       return CustomerType.ENTITY_TYPE_UNSPECIFIED;
     } else if ("I".equalsIgnoreCase(type)) {
       return CustomerType.INDIVIDUAL;
